Documentation and multiple namespaces!